syntax = "proto3";
package management;

message CreateTypesRequest {
	string schema = 1;
}

message CreateTypesResponse {}
