syntax = "proto3";
package management;

message UpdateTypesRequest {
	string schema = 1;
}

message UpdateTypesResponse {}
